# agentic-design-patterns

./: .gitignore  LICENSE
chapter-01/: main.py  pyproject.toml
chapter-02/: README.md  main.py  pyproject.toml
chapter-03/: main.py  pyproject.toml
