[project]
name = "chapter-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deprecated>=1.3.1",
    "google-adk>=1.28.1",
    "google-cloud-aiplatform>=1.145.0",
    "google-genai>=1.70.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
